--- a/index.html
+++ b/index.html
@@ -90,25 +90,30 @@
 <main id="main">
 
 <!-- ======= About Section ======= -->
-<section id="about" style="overflow: hidden;">
-  <div class="container position-relative" data-aos="fade-up" style="padding-top: 50px; padding-bottom: 50px;">
-    <div class="row justify-content-center">
-      <div class="col-lg-8 text-center" style="margin-bottom: 30px;">
-        <!-- Aquí insertamos la imagen para que se muestre completa arriba del texto -->
-        <img src="https://i.ibb.co/BzH6R73/image.png" style="width: 100%; height: auto; max-width: 600px; margin: auto;">
+<section id="about">
+  <div class="container" data-aos="fade-up" style="padding: 50px 20px;">
+    <!-- Sección de imagen -->
+    <div class="row justify-content-center" style="margin-bottom: 30px;">
+      <div class="col-lg-12">
+        <!-- Asegurándonos de que la imagen se ajuste dentro de su contenedor manteniendo su aspecto -->
+        <img src="https://i.ibb.co/BzH6R73/image.png" alt="Imagen del láser" style="max-width: 100%; height: auto; display: block; margin: auto;">
       </div>
-      <div class="col-lg-8" style="background: rgba(0, 0, 0, 0.8); padding: 20px; border-radius: 10px;">
-        <h2 style="color: white;">Acerca del curso</h2>
-        <p style="color: white;">Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
-        <p style="color: white;">Además, este curso te brinda la oportunidad de sumergirte en la investigación, adquiriendo información valiosa para estar al tanto de los avances en el campo de la medicina láser.</p>
-        <h3 style="color: white;">Dónde</h3>
-        <p style="color: white;">Hospital MAC Puebla</p>
-        <h3 style="color: white;">Cuándo</h3>
-        <p style="color: white;">26 - 27 de Abril 2024</p>
+    </div>
+    <!-- Sección de contenido -->
+    <div class="row justify-content-center">
+      <div class="col-lg-8" style="background: rgba(0, 0, 0, 0.7); padding: 20px; border-radius: 10px; color: white;">
+        <h2>Acerca del curso</h2>
+        <p>Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
+        <p>Además, este curso te brinda la oportunidad de sumergirte en la investigación, adquiriendo información valiosa para estar al tanto de los avances en el campo de la medicina láser.</p>
+        <h3>Dónde</h3>
+        <p>Hospital MAC Puebla</p>
+        <h3>Cuándo</h3>
+        <p>26 - 27 de Abril 2024</p>
       </div>
     </div>
   </div>
 </section><!-- End About Section -->
+
 
 
 
