--- a/index.html
+++ b/index.html
@@ -92,27 +92,29 @@
 <!-- ======= About Section ======= -->
 <section id="about">
   <div class="container" data-aos="fade-up" style="padding: 50px 20px;">
-    <!-- Sección de imagen -->
-    <div class="row justify-content-center" style="margin-bottom: 30px;">
+    
+    <!-- Sección de imagen colocada de manera que se ajuste y se vea completa -->
+    <div class="row">
       <div class="col-lg-12">
-        <!-- Asegurándonos de que la imagen se ajuste dentro de su contenedor manteniendo su aspecto -->
-        <img src="https://i.ibb.co/BzH6R73/image.png" alt="Imagen del láser" style="max-width: 100%; height: auto; display: block; margin: auto;">
+        <img src="https://i.ibb.co/BzH6R73/image.png" alt="Imagen del láser" style="width: 100%; height: auto; margin-bottom: 30px;">
       </div>
     </div>
-    <!-- Sección de contenido -->
+    
+    <!-- Sección de contenido con fondo más claro para mejorar la legibilidad -->
     <div class="row justify-content-center">
-      <div class="col-lg-8" style="background: rgba(0, 0, 0, 0.7); padding: 20px; border-radius: 10px; color: white;">
-        <h2>Acerca del curso</h2>
+      <div class="col-lg-8" style="background: rgba(255, 255, 255, 0.8); padding: 20px; border-radius: 10px; color: black;">
+        <h2 style="color: #333;">Acerca del curso</h2>
         <p>Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
         <p>Además, este curso te brinda la oportunidad de sumergirte en la investigación, adquiriendo información valiosa para estar al tanto de los avances en el campo de la medicina láser.</p>
-        <h3>Dónde</h3>
+        <h3 style="color: #333;">Dónde</h3>
         <p>Hospital MAC Puebla</p>
-        <h3>Cuándo</h3>
+        <h3 style="color: #333;">Cuándo</h3>
         <p>26 - 27 de Abril 2024</p>
       </div>
     </div>
   </div>
 </section><!-- End About Section -->
+
 
 
 
