--- a/index.html
+++ b/index.html
@@ -90,26 +90,17 @@
 <main id="main">
 
 <!-- ======= About Section ======= -->
-<section id="about">
-  <div class="container" data-aos="fade-up" style="padding: 50px 20px;">
-    
-    <!-- Sección de imagen colocada de manera que se ajuste y se vea completa -->
-    <div class="row">
-      <div class="col-lg-12">
-        <img src="https://i.ibb.co/BzH6R73/image.png" alt="Imagen del láser" style="width: 100%; height: auto; margin-bottom: 30px;">
-      </div>
-    </div>
-    
-    <!-- Sección de contenido con fondo más claro para mejorar la legibilidad -->
-    <div class="row justify-content-center">
-      <div class="col-lg-8" style="background: rgba(255, 255, 255, 0.8); padding: 20px; border-radius: 10px; color: black;">
-        <h2 style="color: #333;">Acerca del curso</h2>
-        <p>Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
-        <p>Además, este curso te brinda la oportunidad de sumergirte en la investigación, adquiriendo información valiosa para estar al tanto de los avances en el campo de la medicina láser.</p>
-        <h3 style="color: #333;">Dónde</h3>
-        <p>Hospital MAC Puebla</p>
-        <h3 style="color: #333;">Cuándo</h3>
-        <p>26 - 27 de Abril 2024</p>
+<section id="about" style="position: relative; overflow: hidden;">
+  <div class="container position-relative" data-aos="fade-up" style="z-index: 2; padding-top: 50px; padding-bottom: 50px;">
+    <div class="row justify-content-end">
+      <div class="col-lg-8" style="background: rgba(0, 0, 0, 0.8); padding: 20px; border-radius: 10px;">
+        <h2 style="color: white;">Acerca del curso</h2>
+        <p style="color: white;">Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
+        <p style="color: white;">Además, este curso te brinda la oportunidad de sumergirte en la investigación, adquiriendo información valiosa para estar al tanto de los avances en el campo de la medicina láser.</p>
+        <h3 style="color: white;">Dónde</h3>
+        <p style="color: white;">Hospital MAC Puebla</p>
+        <h3 style="color: white;">Cuándo</h3>
+        <p style="color: white;">26 - 27 de Abril 2024</p>
       </div>
     </div>
   </div>
