--- a/index.html
+++ b/index.html
@@ -89,22 +89,15 @@
 
 <main id="main">
 
-<!-- ======= About Section ======= -->
 <section id="about" style="position: relative; overflow: hidden;">
   <div class="container position-relative" data-aos="fade-up" style="z-index: 2; padding-top: 50px; padding-bottom: 50px;">
     <div class="row justify-content-end">
       <div class="col-lg-8" style="background: rgba(0, 0, 0, 0.8); padding: 20px; border-radius: 10px;">
+        <img src="https://ibb.co/mqW5cFL" class="imagen-izquierda" style="position: absolute; top: 50px; left: 20px; width: 200px; height: auto;">
         <h2 style="color: white;">Acerca del curso</h2>
         <p style="color: white;">Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
         <p style="color: white;">Además, este curso te brinda la oportunidad de sumergirte en la investigación, adquiriendo información valiosa para estar al tanto de los avances en el campo de la medicina láser.</p>
-        <h3 style="color: white;">Dónde</h3>
-        <p style="color: white;">Hospital MAC Puebla</p>
-        <h3 style="color: white;">Cuándo</h3>
-        <p style="color: white;">26 - 27 de Abril 2024</p>
-      </div>
-    </div>
-  </div>
-</section><!-- End About Section -->
+        <h3 style
 
 
 
