--- a/index.html
+++ b/index.html
@@ -97,7 +97,14 @@
         <h2 style="color: white;">Acerca del curso</h2>
         <p style="color: white;">Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
         <p style="color: white;">Además, este curso te brinda la oportunidad de sumergirte en la investigación, adquiriendo información valiosa para estar al tanto de los avances en el campo de la medicina láser.</p>
-        <h3 style
+        <h3 style="color: white;">Dónde</h3>
+        <p style="color: white;">Hospital MAC Puebla</p>
+        <h3 style="color: white;">Cuándo</h3>
+        <p style="color: white;">26 - 27 de Abril 2024</p>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
