--- a/index.html
+++ b/index.html
@@ -85,14 +85,12 @@
 </section><!-- End Hero Section -->
 
 
-
-
 <main id="main">
 
 <section id="about" style="position: relative; overflow: hidden;">
   <div class="container position-relative" data-aos="fade-up" style="z-index: 2; padding-top: 50px; padding-bottom: 50px;">
     <div class="row justify-content-end">
-      <div class="col-lg-8" style="background: rgba(0, 0, 0, 0.8); padding: 20px; border-radius: 10px;">
+      <div class="col-lg-8 col-md-10 col-sm-12" style="background: rgba(0, 0, 0, 0.8); padding: 20px; border-radius: 10px;">
         <!-- Asegúrate de reemplazar 'your-direct-image-link.jpg' con el enlace directo a tu imagen -->
         <img src="https://ibb.co/mqW5cFL" class="imagen-izquierda" style="position: absolute; top: 50px; left: 20px; width: 200px; height: auto;">
         <h2 style="color: white;">Acerca del curso</h2>
@@ -108,6 +106,7 @@
 </section>
 
 </main>
+
 
 
 
