--- a/index.html
+++ b/index.html
@@ -184,8 +184,22 @@
       </li>
     </ul>
 
-    <!-- Contenido de la agenda -->
-   <!-- Schedule Day SÁBADO 20 DE ABRIL -->
+ <!-- Botones de la agenda -->
+<ul class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+    <a class="nav-link active" href="#day-4" role="tab" data-toggle="tab">SÁBADO 20 DE ABRIL</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#day-5" role="tab" data-toggle="tab">26 DE ABRIL</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#day-6" role="tab" data-toggle="tab">SÁBADO 27 DE ABRIL 2024</a>
+  </li>
+</ul>
+
+<!-- Contenido de la agenda -->
+<div class="tab-content">
+<!-- Schedule Day SÁBADO 20 DE ABRIL -->
 <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-4">
   <!-- Eventos del SÁBADO 20 DE ABRIL -->
   <div class="row schedule-item">
@@ -224,12 +238,11 @@
     </div>
   </div>
 </div>
-<!-- End Schedule Day SÁBADO 20 DE ABRIL -->
 
 
-      <!-- Schedule Day  26 DE ABRIL -->
+ <!-- Schedule Day 26 DE ABRIL -->
 <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-5">
-  <!-- Eventos del  26 DE ABRIL -->
+  <!-- Eventos del 26 DE ABRIL -->
   <div class="row schedule-item">
     <div class="col-md-2"><time>08:30 AM</time></div>
     <div class="col-md-10">
@@ -268,10 +281,9 @@
     </div>
   </div>
 </div>
-<!-- End Schedule Day VIERNES 26 DE ABRIL -->
 
 
-<!-- Schedule Day SÁBADO 27 DE ABRIL 2024 -->
+ <!-- Schedule Day SÁBADO 27 DE ABRIL 2024 -->
 <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-6">
   <!-- Eventos del SÁBADO 27 DE ABRIL 2024 -->
   <div class="row schedule-item">
@@ -308,11 +320,8 @@
     </div>
   </div>
 </div>
-<!-- End Schedule Day SÁBADO 27 DE ABRIL 2024 -->
 
-    </div>
-  </div>
-</section>
+
 <!-- ======= Venue Section ======= -->
 <section id="venue" class="wow fadeInUp">
   <div class="container-fluid">
