--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="row justify-content-end">
       <div class="col-lg-8 col-md-10 col-sm-12" style="background: rgba(0, 0, 0, 0.8); padding: 20px; border-radius: 10px;">
         <!-- Asegúrate de reemplazar 'your-direct-image-link.jpg' con el enlace directo a tu imagen -->
-        <img src="https://i.postimg.cc/qRCm81gH/temp-Image17ss-Hw.avif" class="imagen-izquierda" style="position: absolute; top: 50px; left: 20px; width: 200px; height: auto;">
+        <img src="https://i.postimg.cc/qRCm81gH/temp-Image17ss-Hw.avif" class="imagen-izquierda" style="top: 50px; left: 20px; width: 200px; height: auto;">
         <h2 style="color: white;">Acerca del curso</h2>
         <p style="color: white;">Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
         <p style="color: white;">Además, este curso te brinda la oportunidad de sumergirte en la investigación, adquiriendo información valiosa para estar al tanto de los avances en el campo de la medicina láser.</p>
@@ -105,9 +105,8 @@
   </div>
 </section>
 
-
-
 </main>
+
 
 
 
