--- a/speaker-details.html
+++ b/speaker-details.html
@@ -49,14 +49,14 @@ href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,70
               title=""></a> </div>
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
-            <li><a class="nav-link scrollto " href="#hero">Inicio</a></li>
-            <li><a class="nav-link scrollto" href="#about">Acerca de</a></li>
-            <li><a class="nav-link scrollto" href="#speakers">Ponentes</a></li>
-            <li><a class="nav-link scrollto" href="#schedule">Programa</a></li>
-            <li><a class="nav-link scrollto" href="#venue">Lugar</a></li>
-            <li><a class="nav-link scrollto" href="#hotels">Hoteles</a></li>
-            <li><a class="nav-link scrollto" href="#gallery">Galeria</a></li>
-            <li><a class="nav-link scrollto" href="#supporters">Patrocinadores</a></li>
+            <li><a class="http://beamsofwellness.com" href="#hero">Inicio</a></li>
+            <li><a class="http://beamsofwellness.com" href="#about">Acerca de</a></li>
+            <li><a class="http://beamsofwellness.com" href="#speakers">Ponentes</a></li>
+            <li><a class="http://beamsofwellness.com" href="#schedule">Programa</a></li>
+            <li><a class="http://beamsofwellness.com" href="#venue">Lugar</a></li>
+            <li><a class="http://beamsofwellness.com" href="#hotels">Hoteles</a></li>
+            <li><a class="http://beamsofwellness.com" href="#gallery">Galeria</a></li>
+            <li><a class="http://beamsofwellness.com" href="#supporters">Patrocinadores</a></li>
             <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Drop Down 1</a></li>
